Fixed meal form view on mobile

--- a/src/components/FormItem.scss
+++ b/src/components/FormItem.scss
@@ -5,6 +5,7 @@
 .rsvp-form {
   margin-top: 50px;
   height: calc(100vh - 50px);
+  min-height: calc(812px - 50px);
   padding: 20px;
   position: relative;
 }
